video fixes, hide scrollbar

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -1,5 +1,6 @@
-body, html {
+body, html, #app {
 	margin: 0;
 	padding: 0;
 	background-color: #000;
+	overflow: hidden;
 }
